[gd_scene load_steps=2 format=3 uid="uid://fgv4p33qdik1"]

[ext_resource type="Script" uid="uid://dlgvdakp0h7ef" path="res://addons/workshop_enhancer/main_panel.gd" id="1_kwshx"]

[node name="MainPanel" type="CenterContainer" node_paths=PackedStringArray("ipLineEdit", "portLineEdit", "hostButton", "stopHostButton", "connectButton", "disconnectButton")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kwshx")
ipLineEdit = NodePath("VBoxContainer/HBoxContainer/IPLineEdit")
portLineEdit = NodePath("VBoxContainer/HBoxContainer2/PortLineEdit")
hostButton = NodePath("VBoxContainer/HostButton")
stopHostButton = NodePath("VBoxContainer/StopHostingButton")
connectButton = NodePath("VBoxContainer/ConnectButton")
disconnectButton = NodePath("VBoxContainer/DisconnectButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="StopHostingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "STOP HOST"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "IP"

[node name="IPLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "1234"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Disconnect"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StopHostingButton" to="." method="_on_stop_hosting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
